--- a/make/autoconf/buildjdk-spec.gmk.in
+++ b/make/autoconf/buildjdk-spec.gmk.in
@@ -55,6 +55,14 @@ OPENJDK_TARGET_CPU_ARCH := @OPENJDK_BUILD_CPU_ARCH@
 OPENJDK_TARGET_CPU_BITS := @OPENJDK_BUILD_CPU_BITS@
 OPENJDK_TARGET_CPU_ENDIAN := @OPENJDK_BUILD_CPU_ENDIAN@
 OPENJDK_TARGET_CPU_LEGACY := @OPENJDK_BUILD_CPU_LEGACY@
+OPENJDK_TARGET_OS := @OPENJDK_BUILD_OS@
+STATIC_BUILD := false
+JVM_FEATURES_server := all-gcs cds compiler1 compiler2
+SHARED_LIBRARY=@BUILD_SHARED_LIBRARY@
+SHARED_LIBRARY_SUFFIX := @BUILD_SHARED_LIBRARY_SUFFIX@
+SET_EXECUTABLE_ORIGIN = @BUILD_SET_EXECUTABLE_ORIGIN@
+SET_SHARED_LIBRARY_ORIGIN = @BUILD_SET_SHARED_LIBRARY_ORIGIN@
+
 OPENJDK_TARGET_OS_INCLUDE_SUBDIR := @OPENJDK_BUILD_OS_INCLUDE_SUBDIR@
 
 HOTSPOT_TARGET_OS := @HOTSPOT_BUILD_OS@
